--- a/organizer/templates/accounts/login.html
+++ b/organizer/templates/accounts/login.html
@@ -1,3 +1,8 @@
+{% if messages %}
+  {% for message in messages %}
+    {{ message }}
+  {% endfor %}
+{% endif %}
 <form method="post">
   {% csrf_token %}
   <label>username</label>
