--- a/organizer/templates/accounts/login.html
+++ b/organizer/templates/accounts/login.html
@@ -1,3 +1,5 @@
+{% block content %}
+
 {% if messages %}
   {% for message in messages %}
     {{ message }}
@@ -11,3 +13,7 @@
   <input type="password" name="password">
   <button type="submt">login</button>
 </form>
+
+<a href="{% url 'password_reset' %}">forgot password?</a>
+
+{% endblock %}
